k8s/comparator/kustomize/comparator/overlays/local/comparator/ucis/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ucis-comparator
  labels:
    app: ucis-comparator
spec:
  tls:
  - hosts:
      - UCIS_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: UCIS_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: UCIS_SERVICE_NAME
            port:
              name: http
